Add color in score

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="game">
+    <h2 class="title">Desafio Chá de bebê da Aurora</h2>
     <span class="score"></span>
     <div class="dino"></div>
     <div class="cacto"></div>
